--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - VIRTUAL_PORT=80
       - HTTPS_METHOD=noredirect
       - ENABLE_SENDMAIL=true
+      - UPDATE_UID_GID=true
     links:
       - db
 
@@ -24,6 +25,7 @@ services:
       - appdata
     environment:
       - ENABLE_SENDMAIL=true
+      - UPDATE_UID_GID=true
     links:
       - db
 
@@ -40,6 +42,7 @@ services:
       - AWS_REGION=eu-west-1
       - AWS_BUCKET=magedbm
       - AWS_MEDIA_BUCKET=magemm
+      - UPDATE_UID_GID=true
     links:
       - db
 
